# PromptScreen

./: .gitattributes  .gitignore  .pre-commit-config.yaml  api.py  ds_metrics.py  et --hard 5a3e4ef  guards.py  main.py  metrics_classes.py  metrics_updated.py  output_eval_pipeline.py  pipeline.py  prepare_threat_db.py  pyproject.toml  pytest.ini  requirements.txt  run_ablation_study.bat  setup.py
.github/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: test.yml
conf/: available_defences.txt  config.yaml
defence/: abstract_defence.py  classifier_cluster.py  heuristic_channel.py  injection_regex.py  linear_svm.py  scanner.py  shieldgemma.py  train_classifier.py  vectordb.py
defence/ds/: analysis_result.py
defence/train/: train_classifier.py
examples/: README.md  run_api.py  run_pipeline.py  run_stats.py  simple_guard.py  train_svm.py
examples/conf/: config.yaml
legacy/: README.md  api.py  ds_metrics.py  guards.py  main.py  metrics_classes.py  pipeline.py
legacy/defence/: abstract_defence.py  classifier_cluster.py  heuristic_channel.py  injection_regex.py  linear_svm.py  ppa_defence.py  ppa_defense_demo.py  scanner.py  shieldgemma.py  vectordb.py
legacy/defence/train/: train_classifier.py
legacy/output_scanners/: scan.py
model_artifacts/: feature_union.joblib  linear_svm_model.joblib  tfidf_vectorizer.joblib
offence/: balanced_test_50.json  balanced_test_50_perturbed.json  combined_classified_prompts.json  data.txt  metrics_test_set.json  prompt-injection.json  reframe.py
offence/advllm/: prompts.json
offence/emoji/: prompts.json
offence/prompt-injection/: prompt-injection.json
offence/regular/: prompts.json
outputs/2025-11-02/16-34-18/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-02/16-40-55/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-02/16-49-34/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-02/19-50-03/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-08/12-27-53/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-09/10-06-13/.hydra/: hydra.yaml
outputs/2025-11-09/19-50-42/.hydra/: hydra.yaml
results/: all_metrics_results.txt  compiled_results.txt  metrics.txt  results.txt  results_baseline_baseline.txt  results_char_ngram_2_4_char_ngram_2_4.txt  results_char_ngram_3_5_char_ngram_3_5.txt  results_hybrid_extended_hybrid_extended.txt  results_hybrid_word_char_hybrid_word_char.txt  results_word_bigram_word_bigram.txt  results_word_ngram_1_3_word_ngram_1_3.txt  results_word_trigram_word_trigram.txt
src/promptscreen/: __init__.py
src/promptscreen/api/: __init__.py  server.py
src/promptscreen/data/: __init__.py
src/promptscreen/data/rules/: apitokens.yar
src/promptscreen/defence/: __init__.py  abstract_defence.py  classifier_cluster.py  heuristic_channel.py  injection_regex.py  linear_svm.py  scanner.py  shieldgemma.py  vectordb.py
src/promptscreen/defence/ds/: __init__.py
src/promptscreen/defence/train/: __init__.py
src/promptscreen/evaluation/: __init__.py  ds_metrics.py  metrics_classes.py  pipeline.py
src/promptscreen/output_scanners/: __init__.py  scan.py
src/promptscreen/utils/: __init__.py
svm_ablation_study/: metrics_test.json  metrics_train.json  perturbed_dataset_gen.py  perturbed_dedup.json  split.py
tests/: conftest.py  test_cli.py
tests/integration/: test_api.py
tests/unit/: test_analysis_result.py  test_attack_result.py  test_heuristic_guard.py  test_injection_scanner.py  test_metrics_calculator.py  test_query_agent.py  test_scanner.py  test_svm_guard.py
